Fixed alignment of navigation

--- a/src/app/partial-sidebar-navigation/partial-sidebar-navigation.component.scss
+++ b/src/app/partial-sidebar-navigation/partial-sidebar-navigation.component.scss
@@ -6,9 +6,8 @@
     height: 74px !important; // TODO: Y U NO WORK W/O !IMPORTANT?!?!?!
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
-    .mat-list-item-content {
-      padding: 0px !important;
-      margin: 0px 74px 0px 74px;
+    ::ng-deep .mat-list-item-content {
+      padding: 0px 10px 0px 67px;
     }
   }
 }
